Changed the shell script test generator to a faster c++ one

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.rules
 
 all: ${OBJ}
-	${CC} ${FLAGS} ${OBJ} -o ${BINTEST}
+	${CC} ${FLAGS} ${OBJ} -o ${BIN}
 
 %.o:
 	${CC} ${FLAGS} -c $(@:.o=.c)
